--- a/secure-random.html
+++ b/secure-random.html
@@ -36,7 +36,10 @@ Then, go ahead and download the element's dependencies:
 
 secure-random has no dependencies
 
+
 ## Related
+
+[secure-hash](http://github.com/hekahouse/secure-hash/)
 
 @group HekaHouse
 @element secure-random
